
install-data-local:
	$(mkinstalldirs) $(DESTDIR)$(kde_datadir)/kst/fonts
	$(INSTALL_DATA) "$(srcdir)/symb08.pcf.gz" "$(DESTDIR)$(kde_datadir)/kst/fonts/symb08.pcf.gz"
	$(INSTALL_DATA) "$(srcdir)/symb10.pcf.gz" "$(DESTDIR)$(kde_datadir)/kst/fonts/symb10.pcf.gz"
	$(INSTALL_DATA) "$(srcdir)/symb12.pcf.gz" "$(DESTDIR)$(kde_datadir)/kst/fonts/symb12.pcf.gz"
	$(INSTALL_DATA) "$(srcdir)/symb14.pcf.gz" "$(DESTDIR)$(kde_datadir)/kst/fonts/symb14.pcf.gz"
	$(INSTALL_DATA) "$(srcdir)/symb18.pcf.gz" "$(DESTDIR)$(kde_datadir)/kst/fonts/symb18.pcf.gz"
	$(INSTALL_DATA) "$(srcdir)/symb24.pcf.gz" "$(DESTDIR)$(kde_datadir)/kst/fonts/symb24.pcf.gz"
	$(INSTALL_DATA) "$(srcdir)/adobe-symbol.enc.gz" "$(DESTDIR)$(kde_datadir)/kst/fonts/adobe-symbol.enc.gz"


